# iowarp-mcps

./: .gitignore  IOWARP_MCPS_SETUP_GUIDE.md  README.md  context.md  iowarp_mcps-0.2.1-py3-none-any.whl  node_hardware_readme.md  pyproject.toml  pyproject.toml.backup  readme_toml_merge.py  test_pipeline.yaml
Arxiv/: README.md  pyproject.toml
Arxiv/src/arxiv_mcp/: mcp_handlers.py  server.py
Arxiv/src/arxiv_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Arxiv/tests/: test_export_utils.py
Darshan/: README.md  pyproject.toml
Darshan/src/darshan_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Darshan/tests/: __init__.py  test_darshan_parser.py  test_server.py
HDF5/: README.md  pyproject.toml
HDF5/data/: sample1.h5
HDF5/docs/: basic_install.md
HDF5/old/HDF5_Yudong_Huang/: pyproject.toml
HDF5/old/hdf5_arman_behnam/: README.md
HDF5/old/hdf5_devin_liu/: README.md  pyproject.toml
HDF5/old/hdf5_rui_zhang/: README.md
HDF5/src/mcp_server/: mcp_handlers.py  server.py
HDF5/tests/: test_mcp_handlers.py
Jarvis/: .gitignore  README.md  pyproject.toml  requirements.txt
Jarvis/docs/: GUIDE.md  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  basic_install.md
Jarvis/src/: server.py
Jarvis/src/implementation/: discoverability.py  output_formatter.py
Jarvis/src/jarvis_mcp/: server.py
Node_Hardware/: .gitignore  README.md  capability_test.py  demo.py  pyproject.toml
Node_Hardware/src/mcp_server/: mcp_handlers.py
Node_Hardware/src/node_hardware/: mcp_handlers.py  server.py
Node_Hardware/tests/: __init__.py  test_capabilities.py  test_handlers.py  test_integration.py  test_server.py
Pandas/: .gitignore  README.md  project.toml  pyproject.toml  pytest.ini
Pandas/src/: __init__.py  mcp_handlers.py  server.py
Pandas/src/capabilities/: data.csv  pandas_handler.py
Pandas/src/implementation/: data_io.py  data_profiling.py  filtering.py  time_series.py
Pandas/src/pandasmcp/: __init__.py  mcp_handlers.py  server.py
Pandas/templates/: index.html
Pandas/tests/: test_capabilities.py  test_mcp_handlers.py
Pandas_Haroon_Gharwi/: README.md  pyproject.toml
Parallel_Sort/: README.md  USAGE_GUIDE.md  pyproject.toml  pytest.ini
Parallel_Sort/src/implementation/: export_handler.py  filter_handler.py  pattern_detection.py
Parallel_Sort/src/parallel_sort/: mcp_handlers.py  server.py
Parallel_Sort/tests/: __init__.py  test_export_handler.py  test_filter_handler.py  test_mcp_handlers.py  test_pattern_detection.py  test_server.py  test_sort_handler.py  test_statistics_handler.py
Plot/: README.md  capability_test.py  pyproject.toml
Plot/src/: server.py
Plot/src/capabilities/: compression_handler.py
Plot/src/implementation/: plot_capabilities.py
Plot/src/plot/: __init__.py  mcp_handlers.py  server.py
Plot/src/plot_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Plot/tests/: __init__.py  test_capabilities.py  test_handlers.py  test_integration.py  test_plot_mcp.py  test_server.py
Slurm/: README.md  comprehensive_capability_test.py  final_node_allocation_test.py  mcp_capabilities_demo.py  pyproject.toml  pytest.ini  server_manager.sh  test_node_allocation_comprehensive.py  test_real_functionality.py
Slurm/docs/: basic_install.md  run.md
Slurm/docs/slurm_installation/: slurm.conf
Slurm/example_scripts/: data_processing.sh  generate_slurm_script.sh  long_simulation.sh
Slurm/mcp_server.egg-info/: requires.txt
Slurm/old/slurm-mcp/: README.md  pyproject.toml
Slurm/slurm_installation/: NATIVE_SLURM_SUCCESS_REPORT.md
Slurm/src/: __init__.py  mcp_handlers.py  server.py  setup.py
Slurm/src/capabilities/: __init__.py  hdf5_handler.py  job_status.py  node_info.py
Slurm/src/implementation/: node_allocation.py  slurm_handler.py  utils.py
Slurm/src/mcp_server.egg-info/: SOURCES.txt  (+2 more)
Slurm/tests/: __init__.py  conftest.py  test_capabilities.py  test_hdf5_handler.py  test_integration.py  test_node_allocation.py  test_performance.py
mcp_server_jafar_alzoubi/: README.md  pyproject.toml
mcp_server_jafar_alzoubi/mcp_server.egg-info/: PKG-INFO
mcp_server_jafar_alzoubi/src/: mcp_handlers.py  models.py
mcp_server_jafar_alzoubi/tests/: test_mcp_handlers.py  test_slurm_handler.py
mcps/Adios/: .gitignore  README.md  pyproject.toml
mcps/Arxiv/: .gitignore  README.md  demo.py  pyproject.toml
mcps/Chronolog/: README.md  pyproject.toml
mcps/Compression/: .gitignore  README.md  pyproject.toml
mcps/HDF5/: README.md  pyproject.toml
mcps/Jarvis/: README.md  pyproject.toml
mcps/Node_Hardware/: README.md  pyproject.toml
mcps/Pandas/: README.md  pyproject.toml
mcps/Parallel_Sort/: .gitignore  README.md  pyproject.toml
mcps/Plot/: .gitignore  README.md  pyproject.toml  pytest.ini
mcps/Slurm/: README.md  pyproject.toml
mcps/lmod/: README.md  pyproject.toml
mcps/parquet/: README.md  pyproject.toml
node_hardware_arman_behnam/: README.md  pyproject.toml
slurm-mcp/: .gitignore  MCP_SERVER_GUIDE.md  README.md  SLURM_CAPABILITIES_REPORT.md  cancellation_test.sh  capability_test.sh  complete_demo.py  complete_server_demo.py  comprehensive_capability_test.py  comprehensive_demo.py  comprehensive_test.sh  compute_job.sh  demo_real_slurm.py  final_verification.py  long_test.sh  mcp_demo_job.sh  memory_job.sh  practical_slurm_demo.py  pyproject.toml  python_mcp_sdk.md  quick_demo.py  quick_job.sh  run.md  run_order.sh  sbatch_mcp_demo.py  server_manager.sh  server_status_checker.py  simple_job_demo.py  simple_job_submit_demo.py  simple_test.sh  specification.md  step_by_step_demo.py  submit_real_job_demo.py  test_job.sh  test_slurm_env.sh
slurm-mcp/slurm/: SLURM_INSTALLATION_GUIDE.md  complete_slurm_demo.sh  example_job.sh  gpu_job.sh  install_slurm.sh  long_test.sh  native_test_job.sh  native_vs_mcp_demo.sh
slurm-mcp/slurm_installation/: final_verification.sh  install_slurm.sh  parallel_job.sh  quick_native_test.sh
slurm-mcp/src/: mcp_handlers.py
slurm-mcp/tests/: test_capabilities.py  test_mcp_handlers.py
(+419 files in other folders)
