[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iowarp-mcps"
version = "0.2.0"
description = "Open Source MCP Servers for Scientific Computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IOWarp Team", email = "team@iowarp.com"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/JaimeCernuda/iowarp-mcps"
Repository = "https://github.com/JaimeCernuda/iowarp-mcps"
Issues = "https://github.com/JaimeCernuda/iowarp-mcps/issues"

[project.scripts]
# Only the unified launcher entry point
iowarp-mcps = "iowarp_mcps:main"

[tool.hatch.build]
packages = ["src/iowarp_mcps"]

[tool.hatch.build.targets.wheel]
packages = ["src/iowarp_mcps"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel.force-include]
"Adios" = "iowarp_mcps/servers/Adios"
"Arxiv" = "iowarp_mcps/servers/Arxiv"
"Chronolog" = "iowarp_mcps/servers/Chronolog"
"Compression" = "iowarp_mcps/servers/Compression"
"Darshan" = "iowarp_mcps/servers/Darshan"
"HDF5" = "iowarp_mcps/servers/HDF5"
"Jarvis" = "iowarp_mcps/servers/Jarvis"
"lmod" = "iowarp_mcps/servers/lmod"
"Node_Hardware" = "iowarp_mcps/servers/Node_Hardware"
"Pandas" = "iowarp_mcps/servers/Pandas"
"Parallel_Sort" = "iowarp_mcps/servers/Parallel_Sort"
"parquet" = "iowarp_mcps/servers/parquet"
"Plot" = "iowarp_mcps/servers/Plot"
"Slurm" = "iowarp_mcps/servers/Slurm"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/Adios",
    "/Arxiv",
    "/Chronolog",
    "/Compression",
    "/Darshan",
    "/HDF5",
    "/Jarvis",
    "/lmod",
    "/Node_Hardware",
    "/Pandas",
    "/Parallel_Sort",
    "/parquet",
    "/Plot",
    "/Slurm",
    "/README.md",
    "/pyproject.toml"
]