[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iowarp-mcps"
version = "0.2.0"
description = "Open Source MCP Servers for Scientific Computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IOWarp Team", email = "team@iowarp.com"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/JaimeCernuda/iowarp-mcps"
Repository = "https://github.com/JaimeCernuda/iowarp-mcps"
Issues = "https://github.com/JaimeCernuda/iowarp-mcps/issues"

[project.scripts]
# Only the unified launcher entry point
iowarp-mcps = "iowarp_mcps:main"

[tool.hatch.build]
packages = ["src/iowarp_mcps"]

[tool.hatch.build.targets.wheel]
packages = ["src/iowarp_mcps"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel.force-include]
"mcps/Adios" = "iowarp_mcps/servers/Adios"
"mcps/Arxiv" = "iowarp_mcps/servers/Arxiv"
"mcps/Chronolog" = "iowarp_mcps/servers/Chronolog"
"mcps/Compression" = "iowarp_mcps/servers/Compression"
"mcps/Darshan" = "iowarp_mcps/servers/Darshan"
"mcps/HDF5" = "iowarp_mcps/servers/HDF5"
"mcps/Jarvis" = "iowarp_mcps/servers/Jarvis"
"mcps/lmod" = "iowarp_mcps/servers/lmod"
"mcps/Node_Hardware" = "iowarp_mcps/servers/Node_Hardware"
"mcps/Pandas" = "iowarp_mcps/servers/Pandas"
"mcps/Parallel_Sort" = "iowarp_mcps/servers/Parallel_Sort"
"mcps/parquet" = "iowarp_mcps/servers/parquet"
"mcps/Plot" = "iowarp_mcps/servers/Plot"
"mcps/Slurm" = "iowarp_mcps/servers/Slurm"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/mcps",
    "/README.md",
    "/pyproject.toml"
]