[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iowarp-mcps"
version = "0.2.4"
description = "Open Source MCP Servers for Scientific Computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IOWarp Team", email = "team@iowarp.com"}
]

# Only dependencies needed for the launcher
dependencies = [
  "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/JaimeCernuda/iowarp-mcps"
Repository = "https://github.com/JaimeCernuda/iowarp-mcps"
Issues = "https://github.com/JaimeCernuda/iowarp-mcps/issues"

[project.scripts]
# Only the unified launcher entry point
iowarp-mcps = "iowarp_mcps:cli"

[tool.hatch.build]
sources = ["src"]

# Include all server directories in the wheel for uvx execution
[tool.hatch.build.targets.wheel.shared-data]
"mcps" = "mcps"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "mcps/",
    "README.md",
    "pyproject.toml"
]