[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darshan-mcp"
version = "0.1.0"
description = "Darshan I/O profiler MCP server for analyzing I/O trace files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=1.10.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "h5py>=3.8.0",
  "scipy>=1.10.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
darshan-mcp = "darshan_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0"
]