[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdf5-mcp"
version = "0.1.0"
description = "MCP server with Pandas data querying and HDF5 file listing tools"
requires-python = ">=3.8"
keywords = ["MCP", "JSON-RPC", "FastAPI", "Pandas", "HDF5"]
license = "MIT"
authors = [
  { name = "shazzadul", email = "sislam6@hawk.iit.edu" }
]
readme = "README.md"
dependencies = [
  "fastapi>=0.95,<1.0",
  "uvicorn[standard]>=0.20",
  "pandas>=1.0",
  "psutil>=5.9" 
]
optional-dependencies = { test = ["pytest>=6.0"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_server*"]