# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-mcp"
version = "0.1.0"
description = "A Scientific MCP Server for AI agents/LLMs to access scientific computing resources"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Suresh"},
]

[project.dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
h5py = "^3.8.0"
pyarrow = "^12.0.0"
pandas = "^2.0.0"
matplotlib = "^3.7.1"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"


[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
