[project]
name = "ScientificMCPServer"
version = "0.1.0"
description = "CS550 Programming Assignment 4: Scientific MCP Server for "
authors = [
    { name = "Haroon Gharwi (Student ID: A20496551)", email = "hgharwi@hawk.iit.edu" }
]
requires-python = "==3.11.11"

dependencies = [
    "requests==2.32.3",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "uvicorn==0.34.2",
    "pytest==8.3.5",
    "httpx== 0.28.1"
]
