[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-mcp"
version = "0.1.0"
description = "Plot MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "matplotlib",
    "pandas"
]

[project.scripts]
plot-mcp = "server:main"

[tool.setuptools.packages.find]
where = ["src"]
