[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.1.0"
description = "Scientific MCP Server Implementation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "h5py>=3.8.0",
    "pydantic>=1.10.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"