[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp"
version = "0.1.0"
description = "Scientific MCP Server for connecting AI agents with scientific tools"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "pytest-asyncio>=0.21.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"