[project]
name = "compression-mcp"
version = "1.0.0"
description = "Compression MCP server implementation using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

keywords = ["compression", "gzip", "storage", "archival", "backup", "analytics", "statistics"]


dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
     "pytest-asyncio>=1.0.0"
]

[project.scripts]
compression-mcp = "server:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
