[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-mcp"
version = "0.1.0"
description = "Pandas MCP server implementation using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["MCP", "JSON-RPC", "FastMCP", "Pandas", "Data Analysis"]
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]
dependencies = [
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=1.10.0",
    "pandas>=2.2.0",
    "numpy<2",
    "scipy>=1.11.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyarrow>=15.0.0",
    "tables>=3.9.0",
    "sqlalchemy>=2.0.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=1.0.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "httpx", "pytest-cov>=4.0.0"]

[project.scripts]
pandas-mcp = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0"
]

[tool.uv.workspace]
members = [
    "pandas-mcp",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
