[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmod-mcp"
version = "0.1.0"
description = "Lmod (module) MCP server for managing environment modules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=1.10.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
lmod-mcp = "lmod_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0"
]