[project]
name = "lmod-mcp"
version = "1.0.0"
description = "Lmod MCP - Environment Module Management for LLMs with comprehensive module operations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

dependencies = [
  "fastmcp",
  "python-dotenv>=1.0.0"
]

keywords = ["lmod", "environment-modules", "module-management", "hpc", "scientific-computing", "supercomputing", "cluster-computing", "module-system"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
lmod-mcp = "server:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"